@@ -4,12 +4,12 @@ import com.unq.crypto_exchange.api.dto.OperatedCryptoDTO;
 import com.unq.crypto_exchange.domain.entity.CryptoUser;
 import com.unq.crypto_exchange.repository.CryptoPriceRepository;
 import com.unq.crypto_exchange.repository.UserRepository;
-import com.unq.crypto_exchange.security.PasswordEncoderFactory;
 import com.unq.crypto_exchange.service.exception.UserAlreadyExistException;
 import com.unq.crypto_exchange.service.exception.UserNotFoundException;
 import lombok.AllArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
@@ -23,6 +23,8 @@ import java.util.stream.Collectors;
 public class UserService {
     private final UserRepository userRepository;
     private final CryptoPriceRepository cryptoPriceRepository;
+    private final BCryptPasswordEncoder passwordEncoder;
+
     private static final Logger logger = LoggerFactory.getLogger(UserService.class);
 
     public CryptoUser register(CryptoUser user) {
@@ -31,7 +33,7 @@ public class UserService {
             logger.info("User email {} already exists", user.getEmail());
             throw new UserAlreadyExistException(user.getEmail());
         });
-        var encryptedPassword = PasswordEncoderFactory.getDefaultEncoder().encode(user.getPassword());
+        var encryptedPassword = passwordEncoder.encode(user.getPassword());
         user.setPassword(encryptedPassword);
         user.fillInitialWallet();
         userRepository.save(user);
@@ -44,7 +46,7 @@ public class UserService {
         var cryptos = operatedCryptos.stream()
                 .map(crypto -> OperatedCryptoDTO.CryptoActiveDTO.fromModel(crypto,
                         cryptoPriceRepository.findFirstByCryptoCurrencyTypeOrderByTimeDesc(crypto.getType()).get()))
-                .collect(Collectors.toList());
+                .toList();
         return new OperatedCryptoDTO(LocalDateTime.now(), BigDecimal.ZERO, BigDecimal.ZERO, cryptos);
     }
 }
